Added dot functionalities while creating the project

--- a/templates/package.json.ejs
+++ b/templates/package.json.ejs
@@ -1,6 +1,8 @@
 {
   "name": "<%= projectName.toLowerCase().replace(/\\s+/g, '-') %>",
-  "version": "1.0.0",
+  "version": "<%= version %>",
+  "description": "<%= description %>",
+  "author": "<%= author %>",
   "main": "src/<%= language === 'TypeScript' ? 'app.ts' : 'app.js' %>",
   "license": "MIT",
   "scripts": {
